** Version 1.5 - Date 03.04.2013 **
  * Add getOS function to M.Environment
  * Add cssClass to DialogViews (thanks to Wulf Solter)
** Version 1.4 - Date 26.03.2013 **
  * Add class tmp-image-hidden in tmp.css
  * Bugfix in show/hide image in ImageView
  * Bugfix in M.List cloneObject
  * Add contentBindingReverse to M.SelectionList
  * Add error handling to M.View.getChildViewsAsArray
  * setActiveButton of the M.ButtonGroupView accepts the name of the button
  * Implemented theme in M.TextFieldView
  * Add appdidload event
  * Add cssClass property to M.GridView
  * Update jQuery to 1.9.1
  * Update jQuery mobile to 1.3.0
  * Bugfix setActiveItem-method in CarouselView (Thanks to Markus)
  * Allow whitespace in property name of valuePattern
  * Added nearestNumber function to M.Math
  * Bugfix setActiveItem-method in CarouselView: Paginator didn't update
  * Updated d8 to v0.4.0
  * Updated underscore.js to v1.4.4
  * Added MovableLabelView

** Version 1.3 - Date 07.12.2012 **
  * Add valueBinding to selectionListView
  * Bugfix cssClass on a Button doesn't affect data-theme anymore
  * Fixed input tap delay
  * Fixed Android Chrome scrolling
  * Added M.ToggleSwitchView
  * Added isPersistent flag to Toolbar
  * Fixed multiple selection dialog mode on for ipad
  * Bugfix if a browser does not support localStorage
  * Fixed problem with BB devices and keyUp event
  * Fixed issues with list item and multiple buttons
  * Fixed a bug with keyUp event an initial text
  * Fixed a bug with image view and the load event
  * Fixed a bug with M.WebView and Android+Cordova (render pseudo div and push iframe dynamically)
  * Set the current list item value to the view value. This enables for example to get the value/contentBinding of a list item in a template view.
  * Fixed an issue with the debugMode flag and M.Logger (thx to wherati)