@@ -1,6 +1,7 @@
 ** Version 1.5 - Date 03.04.2013 **
   * Add getOS function to M.Environment
   * Add cssClass to DialogViews (thanks to Wulf Solter)
+  * Add autocomplete attribute to M.TextFieldView
 ** Version 1.4 - Date 26.03.2013 **
   * Add class tmp-image-hidden in tmp.css
   * Bugfix in show/hide image in ImageView
